--- a/VirtualTouristProject/View/Base.lproj/Main.storyboard
+++ b/VirtualTouristProject/View/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Map View Controller-->
+        <!--Travel Location Map View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="VirtualTouristProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TravelLocationMapViewController" customModule="VirtualTouristProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,7 +32,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="bEu-7S-X3g"/>
                     <connections>
-                        <outlet property="mapView" destination="WV3-9V-tLt" id="LuJ-CJ-uy4"/>
+                        <outlet property="mapView" destination="WV3-9V-tLt" id="Xyn-XC-Fyt"/>
                         <segue destination="JtB-K3-WXu" kind="show" id="yv1-jx-Vzd"/>
                     </connections>
                 </viewController>
