--- a/VirtualTouristProject/View/Base.lproj/Main.storyboard
+++ b/VirtualTouristProject/View/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="bEu-7S-X3g"/>
                     <connections>
-                        <outlet property="mapView" destination="WV3-9V-tLt" id="Xyn-XC-Fyt"/>
+                        <outlet property="mapView" destination="WV3-9V-tLt" id="sM8-ay-Rv9"/>
                         <segue destination="JtB-K3-WXu" kind="show" id="yv1-jx-Vzd"/>
                     </connections>
                 </viewController>
@@ -40,10 +40,10 @@
             </objects>
             <point key="canvasLocation" x="939.13043478260875" y="71.651785714285708"/>
         </scene>
-        <!--View Controller-->
+        <!--Photo Album View Controller-->
         <scene sceneID="ehI-xc-Z12">
             <objects>
-                <viewController id="JtB-K3-WXu" sceneMemberID="viewController">
+                <viewController id="JtB-K3-WXu" customClass="PhotoAlbumViewController" customModule="VirtualTouristProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lKI-bc-VkC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -80,7 +80,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yj2-wG-vA4">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yj2-wG-vA4" userLabel="Image Cell">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                 </imageView>
                                             </subviews>
@@ -102,6 +102,11 @@
                         <color key="backgroundColor" systemColor="systemGray4Color"/>
                     </view>
                     <navigationItem key="navigationItem" id="eIs-RF-pXh"/>
+                    <connections>
+                        <outlet property="collectionView" destination="DGH-3d-PJb" id="AmO-xu-BsU"/>
+                        <outlet property="newCollection" destination="w4z-4q-GtT" id="xOa-mU-sWB"/>
+                        <outlet property="photoMapView" destination="7p9-N0-ZR9" id="5Cb-Vf-qdN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JHM-WB-dkm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
