--- a/VirtualTouristProject/View/Base.lproj/Main.storyboard
+++ b/VirtualTouristProject/View/Base.lproj/Main.storyboard
@@ -48,9 +48,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4z-4q-GtT">
-                                <rect key="frame" x="0.0" y="839" width="414" height="57"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4z-4q-GtT">
+                                <rect key="frame" x="0.0" y="852" width="414" height="44"/>
                                 <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -61,48 +60,65 @@
                                     <action selector="collectionButtonTapped:" destination="JtB-K3-WXu" eventType="touchUpInside" id="7gB-sN-Lq8"/>
                                 </connections>
                             </button>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="7p9-N0-ZR9">
-                                <rect key="frame" x="0.0" y="88" width="414" height="170"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DGH-3d-PJb">
-                                <rect key="frame" x="0.0" y="256" width="414" height="575"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2Me-aW-smI">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="c0L-i9-T7E" customClass="CollectionViewCell" customModule="VirtualTouristProject" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kxL-HN-3Qb">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yj2-wG-vA4" userLabel="Image Cell">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bJ1-ie-nKL">
+                                <rect key="frame" x="0.0" y="88" width="414" height="745"/>
+                                <subviews>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="7p9-N0-ZR9">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="170"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="170" id="n3q-F9-MQJ"/>
+                                        </constraints>
+                                    </mapView>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DGH-3d-PJb">
+                                        <rect key="frame" x="0.0" y="170" width="414" height="575"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2Me-aW-smI">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="c0L-i9-T7E" customClass="CollectionViewCell" customModule="VirtualTouristProject" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kxL-HN-3Qb">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="yj2-wG-vA4" secondAttribute="bottom" id="Lfv-XU-Wo4"/>
-                                                <constraint firstAttribute="trailing" secondItem="yj2-wG-vA4" secondAttribute="trailing" id="Xe1-dN-32r"/>
-                                                <constraint firstItem="yj2-wG-vA4" firstAttribute="top" secondItem="kxL-HN-3Qb" secondAttribute="top" id="tjK-XA-j8u"/>
-                                                <constraint firstItem="yj2-wG-vA4" firstAttribute="leading" secondItem="kxL-HN-3Qb" secondAttribute="leading" id="wqX-fD-veC"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <connections>
-                                            <outlet property="imageCell" destination="yj2-wG-vA4" id="o7I-jT-i76"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yj2-wG-vA4" userLabel="Image Cell">
+                                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        </imageView>
+                                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="bkB-2G-pPN">
+                                                            <rect key="frame" x="54" y="54" width="20" height="20"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        </activityIndicatorView>
+                                                    </subviews>
+                                                </collectionViewCellContentView>
+                                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                                <connections>
+                                                    <outlet property="activityIndicator" destination="bkB-2G-pPN" id="kX1-6J-imR"/>
+                                                    <outlet property="imageCell" destination="yj2-wG-vA4" id="tHz-7b-ddB"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YE4-hI-EpU"/>
                         <color key="backgroundColor" systemColor="systemGray4Color"/>
+                        <constraints>
+                            <constraint firstItem="w4z-4q-GtT" firstAttribute="leading" secondItem="YE4-hI-EpU" secondAttribute="leading" id="2bz-hJ-m89"/>
+                            <constraint firstItem="bJ1-ie-nKL" firstAttribute="leading" secondItem="YE4-hI-EpU" secondAttribute="leading" id="MaV-N3-HQX"/>
+                            <constraint firstItem="bJ1-ie-nKL" firstAttribute="top" secondItem="YE4-hI-EpU" secondAttribute="top" id="N86-vz-LIh"/>
+                            <constraint firstItem="w4z-4q-GtT" firstAttribute="trailing" secondItem="YE4-hI-EpU" secondAttribute="trailing" id="WTB-Dz-TrL"/>
+                            <constraint firstItem="w4z-4q-GtT" firstAttribute="top" secondItem="bJ1-ie-nKL" secondAttribute="bottom" constant="19" id="hPp-9g-kRA"/>
+                            <constraint firstAttribute="bottom" secondItem="w4z-4q-GtT" secondAttribute="bottom" id="ijW-M6-yhd"/>
+                            <constraint firstItem="w4z-4q-GtT" firstAttribute="top" secondItem="bJ1-ie-nKL" secondAttribute="bottom" constant="19" id="nOd-Aj-5Am"/>
+                            <constraint firstItem="bJ1-ie-nKL" firstAttribute="trailing" secondItem="YE4-hI-EpU" secondAttribute="trailing" id="pfe-sc-XkJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eIs-RF-pXh"/>
                     <connections>
@@ -136,6 +152,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
